--- a/MIDTERM PROJECTS/Properties/Resources.resx
+++ b/MIDTERM PROJECTS/Properties/Resources.resx
@@ -121,4 +121,22 @@
   <data name="dashed_line_240px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dashed_line_240px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="line_64px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\line_64px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dotted-barline" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dotted-barline.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="colorpen" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\colorpen.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dashed_line_64px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dashed_line_64px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dotted-line" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dotted-line.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dashed_line_240px1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dashed_line_240px1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
