--- a/MIDTERM PROJECTS/Form1.resx
+++ b/MIDTERM PROJECTS/Form1.resx
@@ -136,71 +136,71 @@
   <data name="btnClear.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAA78SURBVHhe7Vt7UFTXGbdN0qZJ0zadNu00k7Sd6UyT5o92
-        ptNMmj9KZBdEeYmC+AjiI64vFFFx994FlocKIo8Iu8vTZ0QQBZF9AD54+EDkqdH4Nr41RgEFk0mT1K/n
-        O/fcdYG7sIA81uxv5jfD7D3n7jk/vu98j3t3jBNOODFa4aUq/bcPbzzgw5vaxvOm+z6caYeXsvRNdtmJ
-        3kCE8/yAN31PxINuvOPJG15nw5yQgp+m4jVibfdQsAXpzbB6z13Q7LoFQQmHqIjevDGbDXVCCkS8QhQq
-        OPEIJJofwPoygbHFd6iAxAKvsKFOdIcPZ/ZHkSZGlEHcni8s4iHXlt6jAsp5Uwcb7oQ1vDSlv/HkDHdR
-        pOUbz3YRDxm26SwV0Isz7WdTnLAGOdt2oUDB62u7uC4y0dQOATH7qYC+KvMENsUJEaLr+kWWQ1zJ3S7i
-        IcO3XhACiNLUwqY4IcI66i7fdK6HeGiN01ZXCe6rMgaxaU6IwAQZxQlef7SH6yK5HVeoeD5K01WFovEF
-        Nk0aARrNTxSqlAUfqVIbZnMpbUgFl1w/j0udr1Bk9T7ZAeHNGSehOBh1Md/rLh4yaN0RwX15wzI2TRrz
-        +eTXiVDNCi4VpDhXmdo0Jzz9D2y4w8NfU/5rIswdFCds4xlJ8SJ3Xhesj7i424qKl9nUngjWaF5UKJNP
-        olChsRmQWVgJhfubKfHvsLgsQUhlUsuSJRt+yqY5NLxVxq0oTtC6w0Ss9h7iIeek1DEBjbFsmjTmcSlh
-        oni7DpyAkprTXbjrQAssjdFTEcnYUDbNYUFSFl8URiphFilUHmZw501fe3Dm37Kp0sAzD8VBa+sunsjM
-        nQcFV+aS69g0h4SnyvjqeN50CwVcZsN1kfPTmkT31bGpthG8MrETxdl9sKf1icRrOOajVQkP2TSHBBEl
-        F4X5sBfXXbP3S2KdZvAJyf/OW733z2yqbRBhHqE4RZUnJcVDigISOmwtSM49D9F10UWlxEMuyjgpRF7O
-        WMCm9g5MVVCcrN5cmFyjAqpSj7FpDgWf8JJXiCjXUJjQnM8khUMmGFppReLD5z/2VBr+zqb3DgWXshjF
-        Wb4620YQOQFh5BqOIanOQjbNoUCsKQPFw76eLddForg4zoc37GNT+wamJt3TGHRZZPc0BpNtNs1h4M2Z
-        3NCi+nLdRHMbBEQLTQMftVHOptuHZzWRDtBU/RyboCjK0pzTksKJXLmZNQ14UyOb3j9Yl3IzuJhvkI5e
-        yhFB0lCU6fGHiIXZdl1068C4Siqgr9oUyKY/W8AHOth6IomwApNhL670LXZJEt68+T18OEQEoc81pIUT
-        yOcJTQO0VhdN1fPsFs8GhDPMWI3nGG7Smt4q03FfzjRdo9H8mA2nICK8SOadwTEhmackRbNmUMJh4X6c
-        cQm7heMjIKDwOTF6IjG9CE6qBUVaI8xOPgaTNfueiKk0NfmqDR+wqcT6TPH4+bQ1VTQ4SIkmMrLwBr0H
-        Pv/ttWngaPDmDVrcGEZPTC/WmboKgcKEb70IU2IOPBGSN+7BMwyrCMF1b3aZI8XZyULTgFhsNPvqoYdC
-        +fGb85TJRcFc6j0kidTFc1XJf2GXB40pXMFUUTxsK0ltXCQKuzT7NEyiCbAopAkWZ3wqOd6aYtPAZ7np
-        K3ywxL5+aIHiCc3WrqkOfrZQnfQGGzZgJKlnvTGVz6JvBqyQaLPbItawivQmEkXN1HW7W6wU8TiggnPG
-        dPb1Qw+0PBQsIuUT2FHeCPllDaAmf+Nn85Spu9iwAWMJF3cCN4VCcNs/l9x4b0Sriim6LXnNmv1uGjwt
-        EKE6UKyCikZLuZdf0SBa4gM2bEDIUMknaPgFEMgXWFxxZuLRPtOQgXCxnjUNeEMe+/rhgdj+KtjXZBEQ
-        xcTPBtPuylLK39Tx8i/0vBzqChZBaVEmzNCU0E1iQJiTchxibTRA+8t4w30a1T8IMf1vYoTxbbaE4QGp
-        TEpQLHThgoomKuRgXXj9CreX9UrXFhRvz8cB8KhpDXzVvAa+qFsH2o1biasZqJB+kWU0r0sw9n2+9cbQ
-        bKFpQPLIcraE4YOCS3pLKogoVKmtAwkimATredciFG/bGi9oq4um4lnzUk0yxGh30E0j/aP3wYrN5/so
-        z6SJc/zZmwb4rgtJfdQkAr/EljM8ENMYIlwHuq2CS9k9EPEKAwKeM0yXN1d6y2AT5wE3q7ge4lmzsWID
-        LE3cZRESoy2/46qkUL2RvrKWKDyyRHrze2+Q8nBW94pmVGOzxuVFvcrVaA6UwTGZDFqWBEiK1p3o3uV7
-        9DArbo9FgFnra0nktd2qskWO1MCBccKbBwINR3yVZX9iSxy9yA1//xUUD912c7g71E1wpyJeSVJIiibF
-        9oa1kJeXCwFRpXTzmPbgwyBMT6TEskV0aXytY7KmQhTyjndE2TtsqaMP2oix7+h52UUUb2P0eLh+UAW3
-        t4TCMblgiadDpsCXxaskRZPi7dp1sCF3G0xUG6kAGF2XZp+yK5G2JkZmrLXxHp4qw7lRWRfrVXIfvVLW
-        TgPGai+4UfnkzEMR6709qIjIeh8P+HTuJLvFvFCdDFFpVoGGBAqslXtr4Xcnii6+TOTNmyLZskceOZzr
-        7/ScvACFQ2KqIhVtOw5Hw+W1c6FxsqdFyOap3tB5PK7HWFs8Xp4GIet2W4ScvrYGIvKvSQomRXXBNWEu
-        Z7qHHSG2hZFBluKfL+h42SKtyqUVhcuOHAcNBQsseV5vfHgoGlpm+FARP1saCJ319ouI9zcXZ8DMWKtA
-        Q9zTnhIPKQYW/LkD28rwAsaM+ZGWc/XXqsZeEK2uZMMUuFOjltywLbaV8Ra3bvnQF+6VKCXH2WJrfTx8
-        sj0X/COtAo22mb7zLCWcyAXaFmaFxjC2peEBpiY6Th6axssvi8LlJ/jC5fKVkhu0h61mHpqneAkuTQLN
-        qYUBcCNjMRX3UeNqyTndeas2EVJzMNAI1ugXRQJNzmmbgWZJ1ik6bth6hGlqtz8T4aLSedkVUbhNsROg
-        Pn8+dNq5yd7YeSwWLsXNgePjhXRH5PFxbvTMlJojxXPVKaDekC9YFyE2Y8O3XSSpTFcBLRaoNi1nW3z6
-        0PJu/yDnG0ci69EEXv5YFC6PWNyJosXQ0WD/mWUvO2tj4GZWCJwJnQoNE8czq5TD3fzlkuNtsdacBovi
-        rQJN/CGI2HnDIuD0tdX0c3wew7Y7eGjVY/9I8rfJOk6Wk7ZKflMUDJkd6Q5lGTPggplspGnwFmcvr6bM
-        FyzRww1ub1smOcYWO0mgMezOhKAYoeODxHcCxefD+LMHjyXm/r0PqVd5voqJLvbldLx8gU4lT9Ry8v1i
-        FLVmTtQ4MGqnwumSpfCgPlZykUNO8s86zwdZLPHcqhnQtj9CeqwNttYnwJZPNoI/6/hYxOS0BiaL/dig
-        8fgFcctt3cVCZkW4Q2HSJKjeMhsukaAwFC7aeiwa7h6JlLzWG6+lL7Scj3VEyFPzJsPl+Lk02NwgLt9e
-        2fc979YlwOoULfjyBvDiC79VqVSvMln6D51aFpjCy9pQuAy1nOZunUPsmlcPKOGsMUzymj1sPxhJrRED
-        C7VIKzaRxPwhSdKl5om8ezgSkiPdH2v4aY8XcgmrmBQDh17j9hpxY4NogeVZHw6Zq54sXgJHt38kea2/
-        7KyLpechRmcU9ESQLxURy8KOIzGSc/AoKE71p/ske85kEgwemBCTwKFIWu7yFd58e7wPLf4lFzEA3q/V
-        0AQbjwWp60+DD2s00DhpAhUR88n7xp49xxNFIVQ8DI54jLHtPz3oIuRva3l5M35JptqNWsujQbo0nqNb
-        V3vR6G1PaTcYPqiKgpOz/aiIeEaeDZ8ObeVCVXTvaBTkaDyogBmcfArb8tNHcth7P9PyMq2Y85WkTaFf
-        3n2xffFLEiRK06fSBZv10wf9j7CXWEvTZNzjSTKOtXZ1sCdsXiYj65FVsK0OLViKQ5+epWrGP7b34Ecr
-        a9m9CHKjhf82dmQeNgx/+vOgOgouRgVDvdc4i5DGqS7/xTyXbXHokaWU/5KUbttRCMGSpkF7nY0DmvDq
-        /lWQnziRjkWiBT6NEm8wvF3Fw7YwN9ixQA6bQ91msa0NL/RqtwC9Uk4bpHieXa4I77rIGjWN3hnk3BTF
-        w2g3Yok3I/7zdib60fWQs30L287IQB8x9q/k/GjExaBQx/Lmwe1qvodwyKKUkRcPWbt9HhPP5VqqxuVX
-        bCsjB3w8Sc5FJQkw31KxSPJtLRyyOGUyPDxu282HixfLVkAGWU8C/+73OvXY99kWRgd0Ktm/iFjnBdGe
-        WB/WzCN95iGxTMxlKQs5w3v/EeFIAQOMlnfNE8XbEutJE2apDQ2UWIdfI6Wf1DVbxFJUrDawBVeoCRjd
-        P9nI4N380jj5PVzwpujxcN408DrXmrfI+Vq5MZhYdP+aGdWbZokecQMfcrFljm7QHiInq8GF47lTs3XO
-        oFwZW2eYDkk90euNZwzL6LmMZ7RW7fYftjzHgFhPE36NQuaRevpGP+vpDmJtVcSCsAd5vbJ/c9HVMyPc
-        BevjZA75UzWKDM71b+IrbBkRYj0tvWlrYpsLmxjYVvusNFRyjC1iqbk5dgIVT6eSb2RLcVxkabxeIlaQ
-        IdbTe9MDodVGgMF88UDOTOJ6QjTHMlBqnC3iGSkGDWyE4DuIbBmODy0nl4nPVbATgmeb9eaxosGHU3gd
-        eZAEDevrfREbFEbdNDZfdjFL4zI8b+APJ7ACINa4QxQJ62l8VwZzRvEzZCmx0v52bA7kBgvzlbJ2bMWx
-        r3w2oeNlM9N5eQduGM85a/F2Y/XSz2cveLYK89/9xuEi7kBh3bAVuSu5/+LRzrLlnyBTsNv/MKDRuDyP
-        9bQuRP4dClCw3g/uHLL/EeWnxV3EW8pu+8ODjnMdq1819joKkRrl8fjU3r5TF3z3Zn2Eu/h2RAq71Q8X
-        +AowidRZTBAaWGxVH5fKVkBSpCie7GN2CycQpOgP0q9yeYji4Butn+/r2rDFdCebVCdUPE5egG01NtUJ
-        EdqVLr/XquRmKhI54zC5xuCCzYlMUtEw8XRYMrIpTnQHa9iqxYYtNhSS2JmHLXmn5dkJfPGJ5I0nqNUJ
-        XOe0vH6C/q6Od80etR1lJ5wYBowZ83+nfAIvlldyXQAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAA79SURBVHhe7Vt5VFTXGbdN0qZJ0zY9bdrTnKTtOT2nSfNH
+        e06Xk+aPUJkHomyiIC5BXOKoKCAqzLw3wGNRWRSIMAuba0QQBZFZABcWF0RWjcbduOASo4CCyUmT1Nv7
+        3XffOMCbYQBZxszvnN85nHn3vrn3x/fdb3lvJjjhhBPjFV7K8n/7cIaDPpyxczJnvO/DGnd6KcrfpJed
+        sAUsnOf7nPE7LB7qwzuenP51OswJKfjxVa9ha7sHgi3JakVr9t5F/O5bKCj5MBHRmzPk0qFOSAGLVwxC
+        BaceRammB2h9hcCE0jtEQGyBV+lQJ/rChzX5g0hToytQ4t7PzeIB15XfIwIynLGbDnfCEl58+a88Wf1d
+        EGnlpnO9xANGbD5HBPRijQfoFCcsgc+23SBQ8Pr6Xq4LTDV2oYD4A0RAX6VpCp3ihAjRdf1iKlFi2d1e
+        4gEjt10UAojC2EanOCHCMuqu3Hy+n3hgjbPW1AjuqzQE0WlOiIAEGcQJXn+sn+sC2Z1XiXg+CuM1ubz5
+        BTpNGgE8/yO5Mn3Jh8qMpvlseidQzqY1LmIzFsvlObYnOyC8WcM0EAeiLuR7fcUDBqUcFdyX06+g06Sx
+        mEt7HQvVKmczkBQXKjJaFkRm/Y4Od3j485W/xMLcAXEiNp2VFC9m1w3B+rCLu62qeplO7Y9gnn9Rrkg7
+        BUKFJ+hQdnE1Kj7QSgh/RyTmCEIqNrSFhm78MZ3m0PBWGraBOEEpR7BYXf3EAy5Ib6ACGhLoNGksYtMj
+        RPF2HzyJyurO9OLug20oLF5LRMRjw+k0hwVOWXxBGKmEWaRQeZiQO2f8yoM1/ZpOlQaceSAOWFtf8URm
+        7zokuDKb1kCnOSQ8lYZXJ3PGWyDgCiuuC1yc2SK6r4ZOtY7g1ak9IM6eQ/2tTyRcgzEfRiU/pNMcEliU
+        fBDmAxuuu3bfF9g6TcgnpOBbb9W+P9Kp1oGFeQTilFSfkhQPKAqI6bC1ID73PETXBReVEg8YojslRF7W
+        UESn2gakKiBOji0XxteIgMqM43SaQ8EnsuwVLMp1ECY871NJ4YDJ+g5SkfhwBY89Ffq/0um2IWfTl4E4
+        K9fkWgkiJ1EEvgZjcKqzlE5zKGBr0oF40Nez5rpAEBfG+XD6/XTqwIDUpG8aAy4L7JvGQLJNpzkMvFmj
+        G1jUQK6baupEAXFC08BHZWDodPvwrCbSAXzNT6EJCqKE5Z2RFE7k6i20acAZm+n0wcGylJvD8l8DHb2U
+        w4Jkgiizkw5jC7PuuuDWgYnVREBflTGQTn+2AA90oPWEE2E5JMNebPlb9JIkvDnTu/BwCAtCnmtICyeQ
+        KxCaBmCtLnzN8/QWzwaEM8xQC+cYbNKS3krjCV/WOJvn+R/S4QRYhBfxvLMwZnn2aUnRLBmUfES4H2sI
+        pbdwfAQEFD8nRk8gpBfBG+qRPLMZzU87jqbz+5+IqTC2+Kr0/6FTsfUZk+DzWWtrSHCQEk1kTHE7uQc8
+        /7XZNHA0eHN6NWwMoiekFynG3kKAMJHbLqEZ8QefCMkZ9sIZBlWE4Lo3e82R4vw0oWmALTaOfvXIQ674
+        6M1FirSSYDbjHhBH6tKFyrQ/0cvDxgy2aKYoHrSVpDYuEoQNyz2DppEEWBTSiJbpPpEcb0mxaeCz0vgl
+        PFiiXz+yAPGEZmvvVAc+W6ra8AYdNmRsUM17YyanI28GrJJos1sj1LDyrBYcRU3EdftarBThOCCCs4Ys
+        +vUjD7A8ECw6/WO0s7IZFVY0IRX+Gz5bpMjYTYcNGaFs4knYFAjB7vhMcuO2CFYVX3Jb8polB900eFrA
+        QnWDWEVVzeZyr7CqSbTEB3TYkKBTMlN4bgkK5IrMrjg39diAachQuExLmwacvoB+/ehAbH8V7W8xCwhi
+        wmfDaXflKJg3NRzzuZZjUENRCCovyUZz+DKySQgIC9JPoAQrDdDBMkl/n0R1lxDj/6ZGG96mSxgd4Mqk
+        DMQCFy6qaiFCDteF169ye1mrcG0D8fZ+FIAetaxFX7auRZ83pCD1pm3Y1fRESL+YCpLXJRsGPt9sMTxX
+        aBrgPLKSLmH0IGc3vCUVROTKjI6hBBFIgrWcawmIt32tF+psiCPiWfJyXRqKV+8kmwb6x+1Hq7ZcGKA8
+        kybM8advGsC7Ljj1UeEI/BJdzuhATGOwcN3gtnI2fc9QxCsOCHhOP5tprfaWoc2sB7pZw/YTz5LNVRtR
+        WOpus5AQbbmd1ySFskXyylqq8MgS6M3ta8fl4by+Fc24xhbe5UWt0tVgCpSh4zIZagsNkBStL8G9K/dq
+        0bzEvWYB5q2vx5HXeqvKGllcAwcmCm8eCNQf9VVU/IEucfwiP/K9V0A8cNstke6oYYo7EfHqBrmkaFLs
+        alqHCgryUUBsOdk8pD3wMAjSEymxrBFcGl7rmM5XiULe8Y6ueIcudfxBHT3xHS0nuwTibYqbjG4cUqLb
+        W8PRcUawxDPLZ6AvSqMkRZPi7foUtDF/O5qqMhABILqG5Z62K5G2JERmqLXhHp5K/flxWRdrlYyPViHr
+        IgFjjRdqr35y5oGIjd4eRERgo48H+mThNLvFvFibhmIzLQINDhRQK9tq4fcliC6+TOTNGWPossceeazr
+        b7QsUwTCASFVkYq23Ufi0JV1C1HzdE+zkK0zvVHPicR+Y63xRGUmWp6yxyzk7HV1KLrwuqRgUlQVXRfm
+        ssZ70BGiWxgb5Mj//oKGk4WolS4dIFxuzCTUVLTEnOfZ4sPDcahtjg8R8dOwQNTTaL+IcH9TqQ7NTbAI
+        NNg97SnxgGJggZ870K2MLtCECT9Qs67+auXEi6LVlW2cge7UqSQ3bI2dFZzZrds+8EX3yhSS46yxozEJ
+        fbwjH/nHWAQadSt551lKOJFL1G3UCg0RdEujA0hNNCwTnskxV0ThCpN90ZXK1ZIbtIcdJg61zvASXBoH
+        mtNLA1C7bhkR91HzGsk5fXmrPhVl5EGgEazRLxYHmrwzVgNNaM5pMm7UeoSZKrc/YuFiszjZVVG4zQlT
+        UGPhYtRj5yZtsed4ArqcuACdmCykOyJPTHIjZ6bUHCmer01Hqo2FgnVhQjM2cvslnMr0FtBsgSrjSrrF
+        pw815/Y3fL6xOLIeW8cxj0XhCrDFnSxZhrqb7D+z7GVPfTy6mbMcnQ2fiZqmTqZWyaC7hSslx1tjvSkT
+        hSRZBJqkwyh6V7tZwNnrasnn8DyGbnf4UKsm/h7nb9M1rCwvM4q5KQoGzI1xRxW6OeiiCW+kZfgWZy+v
+        pS8WLNHDDd3evkJyjDX24ECj35ONguKFjg8Q3gkUnw/Dzx48Qk2Dex9Sq/R8FRJd6MtpOGaJRsmkqlnm
+        gBhFLZkXOwkZ1DPRmbIw9KAxQXKRI078z7rABZkt8XzUHNR5IFp6rBV2NCajrR9vQv6042MWk1XrqSz2
+        YyPv8TPsltv7igXMiXZHxRumodqt89FlHBRGwkU7jsehu0djJK/Z4vWspebzsQELeXrRdHQlaSEJNu3Y
+        5buqB77n3YZktCZdjXw5PfLiir9RKpWvUlkGD41KFpjOyTpBOJ2KIblbzwi75rWDCnTOECF5zR52HYoh
+        1giBhVikBVtwYv4QJ+lS80TePRKD1se4P+a5WY+XsslRVIqhQ8u7vYbdWC9aYGXOByPmqqdKQ9GxHR9K
+        XhssexoSyHkI0RkEPRnkS0SEsrD7aLzkHDgKSjP8yT7xnrOpBMMHJMQ4cMg3rHT5Em6+I8mHFP+SixgC
+        79fzJMGGY0Hq+tPgwzoeNU+bQkSEfPK+oX/P8WTJciIeBEc4xuj2nx400czbao5phS/JVrkRa3k0TJeG
+        c3TbGi8Sve0p7YbDBzWx6NR8PyIinJHnImejzkqhKrp3LBbl8R5EQB3LzKBbfvpIi3j3J2pOphZzvrLM
+        GeTL+y52IH6Bg0R51kyyYJN29rD/EfYSammSjHs8Scah1q4N9kRbVsjwemRVdKsjC5rikKdnafzkx/Ye
+        /GBlbXtCUH6c8N+GjszDptFPfx7UxqJLscGo0WuSWUjDTJf/Qp5LtzjyyFEwP8el2w4QQrCkWairwcoB
+        jXntQBQqTJ1KxgLBAp9GiTcc3q7h0PYIN7RzCYO2hLvNo1sbXWhVbgFaBUMapHCeXamK7L3IOhWJ3jp8
+        boriQbQbs8SbEv55u1L9yHrw2b6VbmdsoI2e+Gd8fjTDYkCo4wWL0O1arp9wwJL0sRcPWL9jERXP5XoG
+        7/ILupWxAzyexOeiAgeYb4hYOPm2FA5Ymj4dPTxh3c1Hi5cqViEdXs867h/faVQT36NbGB/QKGX/xGJd
+        EER7Yn1QM4/1mQeEMjGfpiz4DLf9I8KxAgQYNedaIIq3NcGTJMxSGxoqoQ6/jks/qWvWCKWoWG1AC66Y
+        DxjfP9nQcW5+mSxzDxa8OW4yumAcep1ryVv4fK3eFIwtenDNjNrN80SPaIeHXHSZ4xukh8jK6mDhcO7U
+        bVswLFeG1hmkQ1JP9GzxrH4FOZfhjFar3N6ny3MMiPU05lcgZAGup9sHWU93Y2urwRYEPcgb1YObC66e
+        He0uWB8rc8ifqhHoWNe/iK+w6aLFelp605aENhc0MaCt9ml5uOQYa4RSc0vCFCKeRslsoktxXOTwXi9h
+        K9CJ9fS+rEDUYSXAQL54MG8udj0hmkMZKDXOGuGMFIMGNELgHUS6DMeHmmVk4nMV6ITA2Wa5eaho4OEU
+        XAcewkHD8vpAhAaFQTOLzpddyuFdRucN/NEEVADYGneKIkE9De/KQM4ofgYsx1Y62I7NwfxgYb5C1gWt
+        OPqVzyY0nGxuFsd0w4bhnLMUbw9UL4N89gJnqzD/X187XMQdKiwbtiJ3pw1ePNJZNv8TZHJ6++8HeN7l
+        eainNSHMtyBA0Xo/dOew/Y8oPyntJV4Yve33DxrWdaI2auINECIt1uPx6X0Dpy7w7k1KtLv4dkQ6vdX3
+        F/AKMI7UOVQQElisVR+XK1ah1BhRPNlH9BZOAHDRH6SNcnkI4sAbrZ/t792whXQnF1cnRDyWKYK2Gp3q
+        hAj1apffqpWMiYiEzzhIriG4QHMiG1c0VDwNlIx0ihN9QRu2KrFhCw2FVHrmQUveaXl2Al58wnnjSWJ1
+        AlOcljdIkN/Vca6547aj7IQTo4AJE/4Pp/AB8p7uacEAAAAASUVORK5CYII=
 </value>
   </data>
   <metadata name="toolStrip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -263,6 +263,9 @@
         kHrtYxrgDlKvfUwD3EHqtU/dbxfuww+cN5QWqdfEpCoD8D8sCMDrr+PIuQAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="ctmGroup.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>523, 17</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>63</value>
   </metadata>
